--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,7 +14,7 @@
     <!--        android:layout_height="match_parent"-->
     <!--        />-->
 
-    <com.chg.chgadapter.CHGRecycleView
+    <com.chg.CHGAdapter.CHGRecycleView
         android:id="@+id/recycleView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
