--- a/app/src/main/res/layout/found_send_data_item.xml
+++ b/app/src/main/res/layout/found_send_data_item.xml
@@ -93,18 +93,20 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@mipmap/ic_launcher" />
+
+            <ImageView
+                android:id="@+id/imageView2"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_marginLeft="-10dp"
                 android:src="@mipmap/ic_launcher" />
 
             <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginLeft="-10dp"
-                android:src="@mipmap/ic_launcher" />
-
-            <ImageView
+                android:id="@+id/imageView3"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_marginLeft="-10dp"
