--- a/app/src/main/res/layout/source_item.xml
+++ b/app/src/main/res/layout/source_item.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="wrap_content"-->
-<!--    android:gravity="center"-->
-<!--    >-->
+
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/imageView"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
-    android:scaleType="centerCrop"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:adjustViewBounds="true"
-    android:src="@mipmap/ic_launcher"/>
-<!--</LinearLayout>-->
+    android:scaleType="centerCrop"
+    android:src="@mipmap/ic_launcher" />
+
+
+
