--- a/app/src/main/res/layout/found_send_data_item.xml
+++ b/app/src/main/res/layout/found_send_data_item.xml
@@ -47,7 +47,7 @@
         </LinearLayout>
     </LinearLayout>
 
-    <com.chg.CHGAdapter.CHGRecycleView
+    <com.chg.CHGAdapter.CHGRecyclerView
         android:id="@+id/chgRecycleView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
