--- a/app/src/main/res/layout/function_area.xml
+++ b/app/src/main/res/layout/function_area.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <com.chg.CHGAdapter.CHGRecycleView
+    <com.chg.CHGAdapter.CHGRecyclerView
         android:id="@+id/funcRecycleView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
