--- a/app/src/main/res/layout/source_item.xml
+++ b/app/src/main/res/layout/source_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:adjustViewBounds="true"
     android:scaleType="centerCrop"
-    android:src="@mipmap/ic_launcher" />
+    android:src="@drawable/default_pic" />
 
 
 
