--- a/app/src/main/res/layout/found_send_data_item.xml
+++ b/app/src/main/res/layout/found_send_data_item.xml
@@ -18,7 +18,7 @@
             android:id="@+id/headImageView"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@drawable/default_pic" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -96,21 +96,21 @@
                 android:id="@+id/imageView1"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@drawable/default_pic" />
 
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_marginLeft="-10dp"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@drawable/default_pic" />
 
             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_marginLeft="-10dp"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@drawable/default_pic" />
         </LinearLayout>
     </RelativeLayout>
 
